--- a/tutorials/html/tutorial01.md.html
+++ b/tutorials/html/tutorial01.md.html
@@ -112,40 +112,14 @@
   </head>
   <body>
     <div class="beginning-of-doc"></div>
-    <h1 id="tutorial03">Tutorial(03)</h1>
+    <h1 id="tutorial01">Tutorial(01)</h1>
 
-<h3 id="tocarryoutaparallelparkingbetweentwocars">To carry out a parallel parking between two cars.</h3>
+<h2 id="acceleratethegiventimeandbrake">Accelerate the given time and brake.</h2>
 
-<p>Implement a model that manages a parking between two cars. The model has to have several modules which are responsible for different actions. One of the examples could be:</p>
+<p>Implement the model that continuously accelerates 10 seconds with acceleration 1 m/s^2 and then brakes with negative acceleration -1m/s^2.</p>
 
-<ol>
-<li>Module with controls the speed of the car, depends form the current action(e.g. parking, searching a parking place).</li>
+<p>To solve this task you have to use the MainController with defined interface to the simulator(from the tutorial 00) and then create your own controller which behaves in desired way.</p>
 
-<li>Module which looking for a gap between cars for the parking.</li>
-
-<li>Module which controls a steering of the car during the parking process.</li>
-</ol>
-
-<p>Each module should be as simple as possible.</p>
-
-<p>To solve this tutorial you have to use at least 6 sensors, which measure the distance to objects which are located in front/left side/back of the car. The speed has to be around 0.5-1 m/s. At the picture you can see the main idea how the parking has to be done:</p>
-
-<p><img src="../img/parking_process1.jpg" alt="alt text" /></p>
-
-<p>The parking process can be divided in 4 steps:  </p>
-
-<ol>
-<li>Go straight until a place have been found.</li>
-
-<li>When the place is found, go back and rotate the car.</li>
-
-<li>When the car has reached appropriate point, rotate car in other direction to fit into given gap between the cars.</li>
-
-<li>When the car is close to the car behind, stop and go forward until it reaches certain distance to the front car.</li>
-</ol>
-
-<p><strong>Important to know, this wed-simulator is a simplified version and it does not change the angle of front wheels but an angle of the car entirely.</strong></p>
-
-<p>Show the <a href="solutions/solution03.md.html">solution</a>.</p>
+<p>Show the <a href="solutions/solution01.md.html">solution</a>.</p>
   </body>
 </html>
