--- a/tutorials/html/tutorial03.md.html
+++ b/tutorials/html/tutorial03.md.html
@@ -119,7 +119,7 @@
 <p>Implement a model that manages a parking between two cars. The model has to have several modules which are responsible for different actions. One of the examples could be:</p>
 
 <ol>
-<li>Module with controls the speed of the car, depends form the current action(e.g. parking, searching a parking place).</li>
+<li>Module which controls the speed of the car, depends form the current action(e.g. parking, searching a parking place).</li>
 
 <li>Module which looking for a gap between cars for the parking.</li>
 
