Updated .html version

--- a/paper/draft.md.html
+++ b/paper/draft.md.html
@@ -173,5 +173,41 @@ To check the possible solution, which has been implemented by a student, a compa
 </ol>
 
 <p><img src="img/architecture.png" alt="alt text" /></p>
+
+<h2 id="howtouseitandhowitiswork">How to use it and how it is work</h2>
+
+<p>Students are going to use the web-playground to understand how to work with C&amp;C models languages like MontiArc. The main idea of the playground to increase interest in the learning process using a gaming form of the tutorials. There are several simple steps in the learning process: </p>
+
+<ol>
+<li>The first tutorial is a task which already has a solution but the idea behind that to show the main constructions and principles of the language and the playground.</li>
+
+<li>Next tutorials have tasks with increasing complexity and every time there is some hint, which motivates students to use particular constructions.</li>
+
+<li>The visualization of the process gives the feeling of the language and understanding of the binding between writing the code and real actions which were caused by the written code.</li>
+
+<li>The process of writing tests shows the benefits of test-driven development and understanding the importance of independent testing of the components.</li>
+</ol>
+
+<p>The process of using the web-playground is very simple. Students don't have to install any applications on the computer and it is possible to use it from any platform, whether it is Mac, Windows or Linux. Only one important condition has to be satisfied - to have a "fresh" version of a browser. IDE, tutorial, visualization are located in one window and has a very intuitive interface.
+A standard sequence of steps is the following:</p>
+
+<ol>
+<li>Open the web-playground in a browser.</li>
+
+<li>Read a tutorial</li>
+
+<li>Write code with tests</li>
+
+<li>Send a model controller to the server, to execute tests and compile the controller.</li>
+
+<li>When the simulator displays the ready state, it means that you may run a visualization execution. If the solution contains errors, a student receives an error message with description.</li>
+
+<li>It's possible to restart the simulation process, add some noise to the sensors to emulate more natural measurements, or specify the period of the simulation process. </li>
+
+<li>After the execution, the current trajectory is compared with the sample solution and the student is notified whether he passed the test or not.</li>
+</ol>
+
+<p><img src="img/screen-simulator.png" alt="alt text" />
+<img src="img/screen-task.png" alt="alt text" /></p>
   </body>
 </html>
