Added the alert message related to HTTPS issue

--- a/ideIntegration.html
+++ b/ideIntegration.html
@@ -31,8 +31,8 @@
     </div>
     <div>
         <!-- <button onclick="appendTestModel()">Append test file</button> -->
-        <button onclick="appendTestTutorial3()">Append tutorial 3</button>
-        <button onclick="appendTestTutorial4()">Append tutorial 4</button>
+        <button onclick="appendTestTutorial3()">Add parking tutorial files</button>
+        <!-- <button onclick="appendTestTutorial4()">Append tutorial 4</button> -->
         <!-- <button onclick="showContent()">Show Content</button> -->
         <button onclick="readAllFiles()">Read, pack and send files</button>
         <!-- <button onclick="packData()">Pack and Send</button> -->
@@ -191,8 +191,14 @@
             });
         }
 
+        var firstTimeRunAlert = false;
         // traverse the folder(project name) 
         function readAllFiles() {
+
+            if(!firstTimeRunAlert){
+                alert("There is an security issue with the connection to the server RWTH-Aachen. It does not have HTTPS certificate yet. To be able to send the data to the server, please allow executing the insecure content. \n In the Chrome browser, the small shield is appeared in the upper right conner, just click on in and then click on - Load unsafe scripts. Then, try please send again. \n We are really sorry for inconvenience. Thank you for your understanding.");
+                firstTimeRunAlert = true;
+            }
 
             document.getElementById("indexSimulator").contentWindow.notReadyToGo();
 
