--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
 			}
 
 			// Run logic using Simulator class
-			var presentationObjects = 0;
+			var presentationObjects = 3; // default value
 			var jsonSimulationConf;
 			var rawWebAssembly;
 			var delayBetweenExecution = 16;
